Implement create API with POST HTTP.